--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
 name: Build backend
 
-on:
-  push:
-    branches:
-      - backend
+# on:
+#   push:
+#     branches:
+#       - backend
 
 permissions:
   contents: write
