--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.14.3",
     "nodemon": "^3.1.10",
     "openai": "^5.12.2",
     "stripe": "^18.3.0",
