--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/extension-task-list": "^2.12.0",
     "@tiptap/extension-underline": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
+    "@tiptap/suggestion": "^3.3.0",
     "@tiptap/vue-3": "^2.12.0",
     "dompurify": "^3.2.6",
     "fs": "^0.0.1-security",
