--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fs": "^0.0.1-security",
     "idb": "^8.0.3",
     "mathjs": "^14.5.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.8",
     "vue": "^3.5.13",
