--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash.isequal": "^4.5.8",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22.15.30"
