--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@clerk/clerk-js": "^5.71.0",
     "@clerk/vue": "^1.8.12",
+    "@joeattardi/emoji-button": "^4.6.4",
     "@tiptap/extension-link": "^2.12.0",
     "@tiptap/extension-placeholder": "^2.12.0",
     "@tiptap/extension-task-item": "^2.12.0",
