--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "silvernote_front",
   "private": true,
-  "version": "0.0.3-beta",
-  "dev": false,
+  "version": "0.0.4-beta",
+  "dev": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/SilverCore-Git/silvernote.git"
   },
   "dependencies": {
-    "@clerk/clerk-js": "^5.71.0",
+    "@clerk/clerk-js": "^5.93.0",
     "@clerk/vue": "^1.8.12",
     "@joeattardi/emoji-button": "^4.6.4",
     "@tailwindcss/typography": "^0.5.16",
