--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@clerk/vue": "^1.8.12",
     "@joeattardi/emoji-button": "^4.6.4",
     "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-collaboration": "^3.4.4",
+    "@tiptap/extension-collaboration-caret": "^3.4.4",
+    "@tiptap/extension-collaboration-cursor": "^2.26.1",
     "@tiptap/extension-link": "^2.12.0",
     "@tiptap/extension-placeholder": "^2.12.0",
     "@tiptap/extension-task-item": "^2.12.0",
@@ -41,7 +44,11 @@
     "swiper": "^11.2.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
-    "vuedraggable": "^4.1.0"
+    "vuedraggable": "^4.1.0",
+    "y-prosemirror": "^1.3.7",
+    "y-socket.io": "^1.1.3",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.7",
