--- a/package.json
+++ b/package.json
@@ -19,31 +19,39 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/express": "^1.7.13",
+    "@tiptap/starter-kit": "^3.5.1",
     "@types/express": "^5.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsdom": "^27.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash.isequal": "^4.5.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.14.3",
     "nodemon": "^3.1.10",
     "openai": "^5.12.2",
+    "prosemirror-model": "^1.25.3",
+    "prosemirror-schema-basic": "^1.2.4",
     "socket.io": "^4.8.1",
     "stripe": "^18.3.0",
     "typescript": "^5.8.3",
+    "xmldom": "^0.6.0",
+    "y-prosemirror": "^1.3.7",
     "y-protocols": "^1.0.6",
     "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash.isequal": "^4.5.8",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^22.15.30"
+    "@types/node": "^22.15.30",
+    "@types/xmldom": "^0.1.34"
   },
   "bugs": {
     "url": "https://github.com/SilverCore-Git/silvernote/issues"
