--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "silvernote_back",
-  "version": "0.0.0",
+  "version": "0.0.5-beta",
   "description": "",
   "main": "index.js",
   "scripts": {
