--- a/package.json
+++ b/package.json
@@ -20,19 +20,29 @@
   "dependencies": {
     "@clerk/clerk-js": "^5.93.0",
     "@clerk/vue": "^1.8.12",
+    "@cropper/element": "^2.0.1",
+    "@cropper/element-image": "^2.0.1",
     "@joeattardi/emoji-button": "^4.6.4",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-collaboration": "^3.4.4",
     "@tiptap/extension-collaboration-caret": "^3.4.4",
     "@tiptap/extension-collaboration-cursor": "^2.26.1",
+    "@tiptap/extension-drag-handle": "^3.6.1",
+    "@tiptap/extension-file-handler": "^3.6.1",
+    "@tiptap/extension-floating-menu": "^3.6.1",
+    "@tiptap/extension-image": "^3.6.1",
     "@tiptap/extension-link": "^2.12.0",
     "@tiptap/extension-placeholder": "^2.12.0",
+    "@tiptap/extension-table": "^3.6.1",
     "@tiptap/extension-task-item": "^2.12.0",
     "@tiptap/extension-task-list": "^2.12.0",
     "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/extension-youtube": "^3.6.1",
+    "@tiptap/extensions": "^3.6.1",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/suggestion": "^3.3.0",
     "@tiptap/vue-3": "^2.12.0",
+    "cropperjs": "^2.0.1",
     "dompurify": "^3.2.6",
     "fs": "^0.0.1-security",
     "idb": "^8.0.3",
@@ -59,6 +69,7 @@
     "path": "^0.12.7",
     "postcss": "^8.5.3",
     "puppeteer": "^24.11.0",
+    "sass-embedded": "^1.93.2",
     "tailwindcss": "^4.1.7",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
