--- a/package.json
+++ b/package.json
@@ -45,13 +45,16 @@
     "cropperjs": "^2.0.1",
     "dompurify": "^3.2.6",
     "fs": "^0.0.1-security",
+    "html2canvas": "^1.4.1",
     "idb": "^8.0.3",
+    "jspdf": "^3.0.3",
     "marked": "^16.2.1",
     "masonry-layout": "^4.2.2",
     "mathjs": "^14.5.0",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.8",
+    "tiptap-markdown": "^0.9.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
     "vuedraggable": "^4.1.0",
