--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@tiptap/extension-collaboration-caret": "^3.4.4",
     "@tiptap/extension-collaboration-cursor": "^2.26.1",
     "@tiptap/extension-drag-handle": "^3.6.1",
+    "@tiptap/extension-drag-handle-vue-3": "^3.6.6",
     "@tiptap/extension-file-handler": "^3.6.1",
     "@tiptap/extension-floating-menu": "^3.6.1",
     "@tiptap/extension-image": "^3.6.1",
     "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/extension-node-range": "^3.6.6",
     "@tiptap/extension-placeholder": "^2.12.0",
     "@tiptap/extension-table": "^3.6.1",
     "@tiptap/extension-task-item": "^2.12.0",
