--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@tiptap/vue-3": "^2.12.0",
     "cropperjs": "^2.0.1",
     "dompurify": "^3.2.6",
+    "floating-vue": "^5.2.2",
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "idb": "^8.0.3",
